tests/003.php
<?php
var_dump(sample_test2());
var_dump(sample_test2('PHP'));
?>
